--- a/html/contact.html
+++ b/html/contact.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="output.css" />
-  <link rel="stylesheet" href="../css/index.css" />
-  <link href="https://fonts.cdnfonts.com/css/mustica-pro-sans-serif" rel="stylesheet">  
-  <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css" />
-  <title>Contact</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="output.css" />
+    <link rel="stylesheet" href="../css/index.css" />
+    <link href="https://fonts.cdnfonts.com/css/mustica-pro-sans-serif" rel="stylesheet">
+    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css" />
+    <title>Contact</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <style type="text/tailwindcss">
         @layer components {
     .container {
@@ -37,18 +37,18 @@
                     <i class="fa fa-bars" aria-hidden="true"></i>
                 </div>
                 <ul class="nav-list w-1/2 hidden md:flex justify-between">
-                    <li class="py-2 md:py-0"><a class="hover:text-[#E1A635]"  href="#">Home</a></li>
+                    <li class="py-2 md:py-0"><a class="hover:text-[#E1A635]" href="#">Home</a></li>
                     <li class="py-2 md:py-0">
-                        <a class="hover:text-[#E1A635]"  href="../html/about.html">About</a>
+                        <a class="hover:text-[#E1A635]" href="../html/about.html">About</a>
                     </li>
                     <li class="py-2 md:py-0">
-                        <a class="hover:text-[#E1A635]"  href="../html/eazysend.html">Projects</a>
+                        <a class="hover:text-[#E1A635]" href="../html/eazysend.html">Projects</a>
                     </li>
                     <li class="py-2 md:py-0">
-                        <a class="hover:text-[#E1A635]" >Resume</a>
+                        <a class="hover:text-[#E1A635]">Resume</a>
                     </li>
                     <li class="py-2 md:py-0">
-                        <a class="hover:text-[#E1A635]"  href="../html/about.html">Contact</a>
+                        <a class="hover:text-[#E1A635]" href="../html/about.html">Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -74,21 +74,22 @@
             <i class="fa fa-clone text-gray" aria-hidden="true"></i>
             <p class="text-xs">Copy email</p>
         </div>
-        <form class="my-24">
+        <form id="contact-form" class="my-24">
             <p class="text-xl md:text-3xl font-[800] leading-12 my-2">Send a message</p>
+            <p id="error-message"></p>
             <div class="block md:flex w-full justify-between gap-12 ">
                 <div class="w-full">
                     <label class="label flex h-auto items-center">Name <span><i
                                 class="fa fa-asterisk text-red-500 text-[8px]" aria-hidden="true"></i>
                         </span></label>
-                    <input type="text" class="input" />
+                    <input type="text" id="name-input" class="input" />
                 </div>
                 <div class="w-full">
                     <label for="default-input" class="label ">Email
                         <span><i class="fa fa-asterisk text-red-500 text-[8px]" aria-hidden="true"></i>
                         </span>
                     </label>
-                    <input type="text" id="default-input" class="input">
+                    <input type="text" id="email-input" class="input">
                 </div>
             </div>
             <div>
@@ -96,10 +97,11 @@
                     <span><i class="fa fa-asterisk text-red-500 text-[8px]" aria-hidden="true"></i>
                     </span>
                 </label>
-                <textarea class="w-full focus:none border-none bg-input p-4" rows="6" md:rows="4"></textarea>
+                <textarea class="w-full focus:none border-none bg-input p-4" rows="6" md:rows="4"
+                    id="text-area-message"></textarea>
             </div>
-            <button type="submit"
-                class="py-3 px-2 w-full rounded-md text-center text-white border-2 my-3 bg-[#1E1E1E]">Send
+            <button id="contact-btn" type="submit"
+                class="py-3 px-2 w-full rounded-md text-center text-white border-2 my-3 bg-gray">Send
                 a
                 message</button>
         </form>
@@ -165,5 +167,6 @@
 </script>
 <script src="../js/index.js
     "></script>
+<script src="../js/contact.js"></script>
 
 </html>
