--- a/html/about.html
+++ b/html/about.html
@@ -35,14 +35,17 @@
           <i class="fa fa-bars" aria-hidden="true"></i>
         </div>
         <ul class="nav-list w-1/2 hidden md:flex justify-between">
+          <p class="text-xl cursor-pointer text-end block md:hidden pr-2 close-icon">x</p>
           <li class="py-2 md:py-0">
-            <a  class="hover:text-[#E1A635]" href="../dist/index.html">Home</a>
+            <a  class=" nav-link" href="../dist/index.html">Home</a>
         </li>
           <li class="py-2 md:py-0">
-            <a href="#" class="hover:text-[#E1A635]" >About</a></li>
-          <li class="py-2 md:py-0"><a class="hover:text-[#E1A635]"  href="../html/eazysend.html">Projects</a></li>
-          <li class="py-2 md:py-0"><a>Resume</a></li>
-          <li class="py-2 md:py-0"><a class="hover:text-[#E1A635]"  href="../html/contact.html">Contact</a></li>
+            <a href="#" class="nav-link" >About</a></li>
+          <li class="py-2 md:py-0">
+            <a class="nav-link"  href="../html/eazysend.html">Projects</a></li>
+          <li class="py-2 md:py-0"><a class="nav-link">Resume</a></li>
+          <li class="py-2 md:py-0">
+            <a class=" nav-link"  href="../html/contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
