--- a/html/contact.html
+++ b/html/contact.html
@@ -37,18 +37,19 @@
                     <i class="fa fa-bars" aria-hidden="true"></i>
                 </div>
                 <ul class="nav-list w-1/2 hidden md:flex justify-between">
-                    <li class="py-2 md:py-0"><a class="hover:text-[#E1A635]" href="#">Home</a></li>
+                    <p class="text-xl  cursor-pointer text-end block md:hidden pr-2 close-icon">x</p>
+                    <li class="py-2 md:py-0"><a class="nav-link" href="../dist/index.html">Home</a></li>
                     <li class="py-2 md:py-0">
-                        <a class="hover:text-[#E1A635]" href="../html/about.html">About</a>
+                        <a class="nav-link" href="../html/about.html">About</a>
                     </li>
                     <li class="py-2 md:py-0">
-                        <a class="hover:text-[#E1A635]" href="../html/eazysend.html">Projects</a>
+                        <a class="nav-link" href="../html/eazysend.html">Projects</a>
                     </li>
                     <li class="py-2 md:py-0">
-                        <a class="hover:text-[#E1A635]">Resume</a>
+                        <a class="nav-link">Resume</a>
                     </li>
                     <li class="py-2 md:py-0">
-                        <a class="hover:text-[#E1A635]" href="../html/about.html">Contact</a>
+                        <a class="nav-link" href="#">Contact</a>
                     </li>
                 </ul>
             </nav>
