--- a/html/eazysend.html
+++ b/html/eazysend.html
@@ -49,16 +49,17 @@
           <i class="fa fa-bars" aria-hidden="true"></i>
         </div>
         <ul class="nav-list w-1/2 hidden md:flex justify-between">
+          <p class="text-xl cursor-pointer text-end block md:hidden pr-2 close-icon">x</p>
           <li class="py-2 md:py-0">
-            <a href="../dist/index.html" class="hover:text-[#E1A635]">Home</a></li>
+            <a href="../dist/index.html" class="nav-link">Home</a></li>
           <li class="py-2 md:py-0">
-            <a href="../html/about.html" class="hover:text-[#E1A635]" >About</a></li>
+            <a href="../html/about.html" class="nav-link" >About</a></li>
           <li class="py-2 md:py-0">
-            <a href="../html/talenthub.html" class="hover:text-[#E1A635]">Projects</a>
+            <a href="#" class="nav-link">Projects</a>
           </li>
-          <li class="py-2 md:py-0"><a class="hover:text-[#E1A635]" >Resume</a></li>
+          <li class="py-2 md:py-0"><a class="nav-link" >Resume</a></li>
           <li class="py-2 md:py-0">
-            <a href="../html/contact.html" class="hover:text-[#E1A635]" >Contact</a>
+            <a href="../html/contact.html" class="nav-link" >Contact</a>
           </li>
         </ul>
       </nav>
@@ -96,7 +97,7 @@
           <psan>Figma, Adobe <br />Photoshop, Smaply</psan>
         </div>
       </div>
-      <ul class="fixed text-[#757575] space-y-2 right-4 cursor-pointer top-1/2  transform -translate-x-1/2 -translate-y-1/2">
+      <ul class="fixed text-[#757575] space-y-2 right-0 md:right-4 cursor-pointer top-1/2  transform  translate-x-0 md:-translate-x-1/2 -translate-y-1/2">
         <li>
           <a href="#problem">The problem</a>
         </li>
