--- a/html/talenthub.html
+++ b/html/talenthub.html
@@ -46,19 +46,20 @@
                     <i class="fa fa-bars" aria-hidden="true"></i>
                 </div>
                 <ul class="nav-list w-1/2 hidden md:flex justify-between">
+                    <p class=" cursor-pointer text-xl text-end block md:hidden pr-2 close-icon">x</p>
                     <li class="py-2 md:py-0">
-                        <a class="hover:text-[#E1A635]"  href="../dist/index.html">Home</a>
+                        <a class="nav-link"  href="../dist/index.html">Home</a>
                     </li>
                     <li class="py-2 md:py-0">
-                        <a class="hover:text-[#E1A635]"  href="../html/about.html">About</a>
+                        <a class="nav-link"  href="../html/about.html">About</a>
                     </li>
                     <li class="py-2 md:py-0">
-                        <a class="hover:text-[#E1A635]"  href="../html/eazysend.html">Projects</a>
+                        <a class="nav-link"  href="../html/eazysend.html">Projects</a>
                     </li>
                     <li class="py-2 md:py-0">
-                        <a class="hover:text-[#E1A635]" >Resume</a></li>
+                        <a class="nav-link" href="##" >Resume</a></li>
                     <li class="py-2 md:py-0">
-                        <a class="hover:text-[#E1A635]"  href="../html/contact.html">Contact</a></li>
+                        <a class="nav-link"  href="../html/contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -102,7 +103,7 @@
             </div>
         </div>
 
-     <ul class="fixed text-[#757575] space-y-2 right-4 cursor-pointer top-1/2  transform -translate-x-1/2 -translate-y-1/2">
+     <ul class="fixed text-[#757575] space-y-2 right-0 md:right-4 cursor-pointer top-1/2  transform  translate-x-0 md:-translate-x-1/2 -translate-y-1/2">
       <li>
         <a href="#problem">The problem</a>
       </li>
