--- a/html/about.html
+++ b/html/about.html
@@ -31,11 +31,11 @@
     <div class="container">
       <nav class="h-full cursor-pointer flex justify-between items-center">
         <a href="../dist/index.html" class="font-semibold text-2xl">Ola Ategun</a>
-        <div class="z-[999] hidden" id="menuIcon">
+        <div class="z-[999] block lg:hidden" id="menuIcon">
           <i class="fa fa-bars" aria-hidden="true"></i>
         </div>
-        <ul class="nav-list w-1/2 flex justify-between">
-          <p class="text-xl cursor-pointer text-end block md:hidden pr-2 close-icon">x</p>
+        <ul class="nav-list w-full lg:w-1/2 hidden lg:flex justify-between space-y-1">
+           <p class="text-xl text-end block lg:hidden pr-2 close-icon">x</p>
           <li class="py-2 md:py-0">
             <a  class=" nav-link" href="../dist/index.html">Home</a>
         </li>
